--- a/css/header-block.css
+++ b/css/header-block.css
@@ -1,26 +1,26 @@
 .banner {
 	color: #fff;
-	background-color: rgba(96,170,210, .5);
+	background-color: rgba(44, 165, 146, 0.58);
     box-sizing: border-box;
 }
 
 .banner-heading {
     padding: 5em 0 0.5em;
  	font-size: 1.6em;
-    font-family: Georgia;
+ 	font-family: 'Lora', serif;
     font-style: italic;
-    font-weight: 500;
+    font-weight: 700;
     text-align: center;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 1px #365579;
     box-sizing: border-box;
 }
 
 .banner-text {
     font-size: 2em;
     text-align: center;
-    font-weight: 500;
-    font-family: Georgia;
-    text-shadow: 1px 1px 1px black;
+    font-weight: 700;
+    font-family: 'Lora', serif;
+    text-shadow: 1px 1px 1px #365579;
 }
 
 /*========== Logo style==========*/
@@ -31,12 +31,12 @@
 
 .logo {
 	display: inline-block;
-	width: 60px;
-	height: 60px;
-	background-color: #fff;
-	border: 4px solid #2DA8A2;
-	border-radius: 50%;
-	box-sizing: border-box;
+    width: 60px;
+    height: 60px;
+    background-color: rgb(99, 134, 127);
+    border: 4px solid rgb(182, 171, 56);
+    border-radius: 50%;
+    box-sizing: border-box;
 }
 
 .logo a {
@@ -44,15 +44,13 @@
 	vertical-align: middle;
 	margin: 0 auto;
 	text-align: center;
-	text-shadow: .5px .5px .5px #2DA8A2;
 	text-decoration: none;
-	color: #2DA8A2;
+	color: #fff;
 	line-height:  2.5em;
 	height: 100%;
 	box-sizing: border-box;
-	font-family: 'Playfair Display', serif;
-	font-weight: 900;
-	font-style: italic;
+	font-family: 'Lora', serif;
+	font-weight: 700;
 	font-size: 1.5em;
 }
 /*==========Finish Logo style==========*/
@@ -80,7 +78,8 @@
 	color: #fff;
 	display: inline-block;
 	text-decoration: none;
-	padding: 5px 10px;
+	padding: 5px 7px;
+	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	border: 2px solid #fff;
 	border-radius: 4px;
@@ -89,9 +88,10 @@
 }
 
 .site-nav a:hover {
-	color: #22B376;
+	color: #476851;
+	font-weight: bold;
 	background: #fff;
-	border: 2px solid #B1CCC1;
+	border: 2px solid #E1DEDE;
 }
 
 /*==========Finish Site-Nav style==========*/
@@ -139,6 +139,7 @@
 		margin-right: 1.5em;
 	}
 	.site-nav a {
+		font-family: 'Oswald', sans-serif;
 		padding: .1em .8em;
 	    font-size: 1.1em;
 	}
@@ -159,3 +160,49 @@
 	    font-size: 1.2em;
 	}
 }
+
+@media screen and (min-width: 900px) {
+.banner {
+		-webkit-animation: spotlightBG 10s infinite alternate;
+		-moz-animation: spotlightBG 10s infinite alternate;
+		animation: spotlightBG 10s infinite alternate;
+	}
+
+	.logo-nav {
+		width: 80%;
+	}
+	.site-nav {
+		padding-top: 15px;
+	}
+	.site-nav li {
+		margin-right: 2em;
+	}
+	.site-nav a {
+		padding: .2em 1.3em;
+	    font-size: 1.2em;
+	}
+}
+
+	@-webkit-keyframes spotlightBG {
+		0% { background-color: rgba(153, 45, 56, 0.57); }
+		25% { background-color: rgba(153, 45, 141, 0.6); }
+		50% { background-color: rgba(44, 146, 141, 0.53); }
+		75% { background-color: rgba(45, 59, 153, 0.53); }
+		100% { background-color: rgba(153, 149, 45, 0.53); }
+	}
+		@-moz-keyframes spotlightBG {
+		0% { background-color: rgba(153, 45, 56, 0.57); }
+		25% { background-color: rgba(153, 45, 141, 0.6); }
+		50% { background-color: rgba(44, 146, 141, 0.53); }
+		75% { background-color: rgba(45, 59, 153, 0.53); }
+		100% { background-color: rgba(153, 149, 45, 0.53); }
+	}
+		@keyframes spotlightBG {
+		0% { background-color: rgba(144, 18, 166, 0.58); }
+		25% { background-color: rgba(21, 80, 167, 0.5); }
+		50% { background-color: rgba(21, 167, 38, 0.5); }
+		75% { background-color: rgba(173, 144, 11, 0.59); }
+		100% { background-color: rgba(171, 58, 23, 0.66); }
+	}
+}
+	
