--- a/css/main-block.css
+++ b/css/main-block.css
@@ -1,31 +1,12 @@
-#main-block {
-	min-height: 100%;
-}
-
-#main-block p {
-	font-family: Arial;
-	font-size: 1.1em;
-	color: #2F9151;
-	padding-top: .5em;
-}
-
-.about, .i-can, .contact {
-	padding: 0 1em;
-	box-sizing: border-box;
-}
 
 /*==============About Section================*/
-.about {
-	background-color: #fff;
-	margin-bottom: 2em;
-}
-
 .my-photo {
     width: 160px;
     margin: 0 auto;
 }
 
 .my-photo img {
+	border: 10px solid hsl(158, 23%, 63%);
 	border-radius: 50%;
 	max-width: 100%;
 	height: auto;
@@ -40,7 +21,15 @@
     padding: 0 1em;
     box-sizing: border-box;
     background-color: #fff;
-	margin-bottom: 2em;
+}
+
+.i-can:before,
+.i-can:after {
+	display: block;
+	margin: 3em auto;
+	content: "";
+	width: 20%;
+	border-bottom: 3px solid hsla(0,0%,50%, .5);
 }
 
 .i-can img {
@@ -62,10 +51,6 @@
 
 /*==============I Can Section================*/
 
-.contact {
-	background-color: #fff;
-}
-
 .contact-description {
     padding: 1em 0 0;
     width: 90%;
@@ -76,36 +61,69 @@
     font-size: 2.2em;
 }
 
-/*============== Footer ================*/
+/*============= Form Style ==============*/
+form {
+	width: 400px;
+	background-color: rgba(130, 156, 153, 0.11);
+	margin: 2em auto;
+	padding: 1em;
+}
 
-#bottom-block {
+.hidden-label {
+	position: absolute;
+	height: 0;
+	width: 0;
+	overflow: hidden;
+	visibility: hidden;
+}
+
+input[type="email"],
+input[type="text"] {
 	width: 100%;
-	height: 100px;
-	color: #038741;
-	background-color: #ABD9C0;
-	margin-top: -100px;
+	height: 40px;
+	display: block;
 	box-sizing: border-box;
+	padding: 0 10px;
+	margin: 0 auto;
+	font-family: 'Lora', serif;
+	font-size: 100%;
+	margin-bottom: 15px;
+	border: 1px solid #CDCDCD;
+	outline: none;
 }
 
-#bottom-block p {
-	text-align: center;
-	padding-top: 1em;
+input[type="email"]:focus,
+input[type="text"]:focus {
+	border: 1px solid #869960;
+	box-shadow: inset 2px 2px 2px rgba(0,0,0,.13);
 }
 
-.social-links {
-	width: 70%;
-	margin: .5em auto;
+.mm-btn {
+    display: block;
+    padding: .5em .3em;
+    border: 1px solid #A2BCB6;
+    box-sizing: border-box;
+    width: 200px;
+    margin: 1em auto .5em;
+    color: #D9EEE1;
+    font-family: 'Lora', serif;
+    font-weight: 700;
+    font-size: 100%;
+    border-radius: 5px;
+    background-color: rgba(71, 135, 91, 0.61);
+    transition: .5s all;
+    outline: none;
 }
 
-.social-links li {
-	float: left;
-	margin-right: 1em;
-	list-style: none;
+.mm-btn:hover {
+	background-color: #52A08C;
+	color: #fff;
+	cursor: pointer;
 }
+/*============= The End Form Style ==============*/
 
-.social-links a {
-	text-align: center;
-}
+/*============== Media ================*/
+
 
 @media screen and (min-width: 500px) {
 	.about {
@@ -124,6 +142,7 @@
 	.design-img {
 		width: 240px;
 	}
+
 	.design-text,
 	.develop-text {
 		padding: 1em;
@@ -131,8 +150,9 @@
 
 	.contact-description {
 		font-size: 115%;
-		padding: 2em 0 0;
+		padding: .5em 0 0;
 	}
+
 	.contact-description p {
 		text-align: center;
 	}
@@ -143,14 +163,16 @@
 	.about {
 		padding-top: 2em;
 	}
+
 	.my-photo {
 		width: 280px;
 		margin-right: 40px;
-		padding:0;
-		float-left;
+		padding: 0;
+		float: left;
 		box-sizing: border-box;
 		display: inline-block;
 	}
+
 	.hello-about {
 		width: 50%;
 		margin: 0 auto;
@@ -171,6 +193,7 @@
 		width: 50%;
 		box-sizing: border-box;
 	}
+
 	.develop-img {
  		float: right;
  		width: 300px;
@@ -180,6 +203,7 @@
  	.develop-text {
 		padding: 4em 2em;
  	}
+
  	.design-text {
 	    padding: .5em 2em;
  	}	
@@ -246,5 +270,54 @@
 		padding-bottom: 1em;
 	}
 }
+/*============== The end of 1024 media=================*/
 
-	
+/*============== Footer ================*/
+#bottom-block {
+	width: 100%;
+	height: 120px;
+	color: #676B69;
+	background-color: rgb(139, 183, 167);
+	margin-top: -100px;
+	box-sizing: border-box;
+}
+
+#bottom-block p {
+	text-align: center;
+	padding-top: 1em;
+}
+
+.social-links {
+	width: auto;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.social-links a {
+	width: 40px;
+	height: 40px;
+	display: inline-block;
+	text-indent: -999;
+	transform: scale(.8, .8);
+	background-position: center center;
+	background-repeat: no-repeat;
+	text-align: center;
+	border: 0;
+
+	text-decoration: none;
+	padding: 1em;
+	color: #767171;
+}
+
+.f {
+	background: url(../img/facebook.png) center no-repeat;
+	/*background-size: cover;*/
+}
+
+.in {
+	background: url(../img/linkedin.png) center no-repeat;
+}
+
+.git {
+	background: url(../img/github.png) center no-repeat;
+}
