--- a/css/main-block.css
+++ b/css/main-block.css
@@ -98,7 +98,7 @@ input[type="text"]:focus {
 	box-shadow: inset 2px 2px 2px rgba(0,0,0,.13);
 }
 
-.mm-btn {
+#btn-send {
     display: block;
     padding: .5em .3em;
     border: 1px solid #A2BCB6;
@@ -115,7 +115,7 @@ input[type="text"]:focus {
     outline: none;
 }
 
-.mm-btn:hover {
+#btn-send:hover {
 	background-color: #52A08C;
 	color: #fff;
 	cursor: pointer;
