--- a/css/header-block.css
+++ b/css/header-block.css
@@ -2,6 +2,7 @@
 	color: #fff;
 	background-color: rgba(44, 165, 146, 0.58);
     box-sizing: border-box;
+    position: relative;
 }
 
 .banner-heading {
@@ -21,6 +22,23 @@
     font-weight: 700;
     font-family: 'Lora', serif;
     text-shadow: 1px 1px 1px #365579;
+}
+
+.typed-text {
+	width: 350px;
+	height: 100px;
+	padding: 10px 20px;
+	/*margin-left: -175px;*/
+	background-color: #1a1a1a;
+	font-size: 115%;
+	color: #0bff27;
+	text-shadow: 1px 1px 2px #089119;
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: none;
 }
 
 /*========== Logo style==========*/
@@ -162,11 +180,6 @@
 }
 
 @media screen and (min-width: 900px) {
-.banner {
-		-webkit-animation: spotlightBG 10s infinite alternate;
-		-moz-animation: spotlightBG 10s infinite alternate;
-		animation: spotlightBG 10s infinite alternate;
-	}
 
 	.logo-nav {
 		width: 80%;
@@ -183,26 +196,5 @@
 	}
 }
 
-	@-webkit-keyframes spotlightBG {
-		0% { background-color: rgba(153, 45, 56, 0.57); }
-		25% { background-color: rgba(153, 45, 141, 0.6); }
-		50% { background-color: rgba(44, 146, 141, 0.53); }
-		75% { background-color: rgba(45, 59, 153, 0.53); }
-		100% { background-color: rgba(153, 149, 45, 0.53); }
-	}
-		@-moz-keyframes spotlightBG {
-		0% { background-color: rgba(153, 45, 56, 0.57); }
-		25% { background-color: rgba(153, 45, 141, 0.6); }
-		50% { background-color: rgba(44, 146, 141, 0.53); }
-		75% { background-color: rgba(45, 59, 153, 0.53); }
-		100% { background-color: rgba(153, 149, 45, 0.53); }
-	}
-		@keyframes spotlightBG {
-		0% { background-color: rgba(144, 18, 166, 0.58); }
-		25% { background-color: rgba(21, 80, 167, 0.5); }
-		50% { background-color: rgba(21, 167, 38, 0.5); }
-		75% { background-color: rgba(173, 144, 11, 0.59); }
-		100% { background-color: rgba(171, 58, 23, 0.66); }
-	}
 
 	
