--- a/css/main-content.css
+++ b/css/main-content.css
@@ -278,6 +278,24 @@ input[type="text"]:focus {
 }
 /*============== The end of 1024 media=================*/
 
+
+/*============== back to top Button=================*/
+.back-to-top {
+    position: fixed;
+    bottom: 140px;
+    right: 0px;
+    text-decoration: none;
+    color: #000000;
+    background-color: rgba(235, 235, 235, 0.80);
+    font-size: 12px;
+    padding: 1em;
+    display: none;
+}
+
+.back-to-top:hover {    
+    background-color: rgba(135, 135, 135, 0.50);
+}
+
 /*============== Footer ================*/
 #bottom-block {
 	width: 100%;
