--- a/css/main-content.css
+++ b/css/main-content.css
@@ -68,8 +68,8 @@
 
 /*============= Form Style ==============*/
 form {
-	width: 400px;
-	background-color: rgba(130, 156, 153, 0.11);
+	width: auto;
+	background-color: rgba(130, 156, 153, 0.2);
 	margin: 2em auto;
 	padding: 1em;
 	border-radius: 10px;
@@ -87,14 +87,14 @@ form {
 input[type="email"],
 input[type="text"] {
 	width: 100%;
-	height: 40px;
+	height: 30px;
 	display: block;
 	box-sizing: border-box;
 	padding: 0 10px;
 	margin: 0 auto;
 	font-family: 'Lora', serif;
 	font-size: 100%;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	border: 1px solid #CDCDCD;
 	outline: none;
 }
@@ -129,9 +129,54 @@ input[type="text"]:focus {
 }
 /*============= The End Form Style ==============*/
 
+/*============== Footer ================*/
+#bottom-block {
+	width: 100%;
+	height: 120px;
+	color: #676B69;
+	background-color: rgb(139, 183, 167);
+	margin-top: -40px;
+	box-sizing: border-box;
+}
+
+#bottom-block p {
+	text-align: center;
+	padding-top: 1em;
+}
+
+.social-links {
+	width: auto;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.social-links a {
+	width: 45px;
+	height: 45px;
+	display: inline-block;
+	transform: scale(.8, .8);
+	background-position: center center;
+	background-repeat: no-repeat;
+	border: 0;
+	padding: 1em;
+}
+
+.f {
+	background: url(../img/facebook.png) center no-repeat;
+	/*background-size: cover;*/
+}
+
+.in {
+	background: url(../img/linkedin.png) center no-repeat;
+}
+
+.git {
+	background: url(../img/github.png) center no-repeat;
+}
+
+
+
 /*============== Media ================*/
-
-
 @media screen and (min-width: 500px) {
 	#about {
 		font-size: 115%;
@@ -162,6 +207,15 @@ input[type="text"]:focus {
 
 	.contact-description p {
 		text-align: center;
+	}
+	
+	form {
+		width: 400px;
+	}
+	
+	input[type="email"],
+	input[type="text"] {
+		height: 40px;
 	}
 	
 }
@@ -233,6 +287,71 @@ input[type="text"]:focus {
     	padding: 1em 2.5em;
     	text-align: center;
 	}
+	
+	form {
+		width: 400px;
+		background-color: rgba(130, 156, 153, 0.11);
+		margin: 2em auto;
+		padding: 1em;
+		border-radius: 10px;
+		box-shadow: 0 0 4px rgba(0,0,0,.4);
+	}
+
+	.hidden-label {
+		position: absolute;
+		height: 0;
+		width: 0;
+		overflow: hidden;
+		visibility: hidden;
+	}
+
+	input[type="email"],
+	input[type="text"] {
+		width: 100%;
+		height: 40px;
+		display: block;
+		box-sizing: border-box;
+		padding: 0 10px;
+		margin: 0 auto;
+		font-family: 'Lora', serif;
+		font-size: 100%;
+		margin-bottom: 15px;
+		border: 1px solid #CDCDCD;
+		outline: none;
+	}
+
+	input[type="email"]:focus,
+	input[type="text"]:focus {
+		border: 1px solid #869960;
+		box-shadow: inset 2px 2px 2px rgba(0,0,0,.13);
+	}
+	
+	#bottom-block {
+	    margin-top: -120px;
+	}
+	
+	#btn-send {
+	    display: block;
+	    padding: .5em .3em;
+	    border: 1px solid #A2BCB6;
+	    box-sizing: border-box;
+	    width: 200px;
+	    margin: 1em auto .5em;
+	    color: #D9EEE1;
+	    font-family: 'Lora', serif;
+	    font-weight: 700;
+	    font-size: 100%;
+	    border-radius: 5px;
+	    background-color: rgba(71, 135, 91, 0.61);
+	    transition: .5s all;
+	    outline: none;
+	}
+	
+	#btn-send:hover {
+		background-color: #52A08C;
+		color: #fff;
+		cursor: pointer;
+	}
 }
 
 @media screen and (min-width: 1024px) {
@@ -283,10 +402,11 @@ input[type="text"]:focus {
 .back-to-top {
     position: fixed;
     bottom: 140px;
-    right: 0px;
+    right: 30px;
     text-decoration: none;
-    color: #000000;
-    background-color: rgba(235, 235, 235, 0.80);
+    color: #edf1f0;
+    border-radius: 10px;
+    background-color: rgb(125, 170, 142);
     font-size: 12px;
     padding: 1em;
     display: none;
@@ -296,47 +416,3 @@ input[type="text"]:focus {
     background-color: rgba(135, 135, 135, 0.50);
 }
 
-/*============== Footer ================*/
-#bottom-block {
-	width: 100%;
-	height: 120px;
-	color: #676B69;
-	background-color: rgb(139, 183, 167);
-	margin-top: -100px;
-	box-sizing: border-box;
-}
-
-#bottom-block p {
-	text-align: center;
-	padding-top: 1em;
-}
-
-.social-links {
-	width: auto;
-	margin: 0 auto;
-	text-align: center;
-}
-
-.social-links a {
-	width: 45px;
-	height: 45px;
-	display: inline-block;
-	transform: scale(.8, .8);
-	background-position: center center;
-	background-repeat: no-repeat;
-	border: 0;
-	padding: 1em;
-}
-
-.f {
-	background: url(../img/facebook.png) center no-repeat;
-	/*background-size: cover;*/
-}
-
-.in {
-	background: url(../img/linkedin.png) center no-repeat;
-}
-
-.git {
-	background: url(../img/github.png) center no-repeat;
-}
